@@ -299,12 +299,11 @@ class EventBasedCalculator(base.HazardCalculator):
         than 4,294,967,296. The limits are due to the numpy dtype used to
         store the GMFs (gmv_dt). They could be relaxed in the future.
         """
-        max_ = dict(events=TWO32, imts=2**8)
+        max_ = dict(sites=TWO32, events=TWO32, imts=2**8)
         num_ = dict(events=self.E, imts=len(self.oqparam.imtls))
         if self.sitecol:
-            max_['sites'] = min(self.oqparam.max_num_sites, TWO32)
             num_['sites'] = len(self.sitecol)
-        for var in max_:
+        for var in num_:
             if num_[var] > max_[var]:
                 raise ValueError(
                     'The event based calculator is restricted to '
